8154457: runtime/SharedArchiveFile/SharedStrings Shared string table stats missing

Added more information when print out message reporting disabling the shared strings at CDS dump time.

Reviewed-by: lfoltan, hseigel, mseledtsov, gtriantafill